# beyond-clojure

./: .gitignore  README.md
backends/haskell/: LICENSE  README.md  simple-backend.cabal  stack.yaml
backends/haskell/app/: Main.hs
backends/haskell/src/: App.hs  Model.hs  SqliteSnaplet.hs
backends/haskell/test/: Spec.hs
backends/rust/: .gitignore  Cargo.toml  README.md
backends/rust/src/: main.rs
frontends/elm/: .gitignore  README.md  elm-package.json  package.json
frontends/elm/src/: Mailboxes.elm  Main.elm  Models.elm  Routing.elm  Update.elm  View.elm  index.js
frontends/elm/src/Players/: Actions.elm  Commands.elm  Edit.elm  Effects.elm  List.elm  Models.elm  Update.elm
