name:                simple-backend
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/martintrojer/simple-backend#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Trojer
maintainer:          martin.trojer@gmail.com
copyright:           2016 Martin Trojer
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , Model
                     , SqliteSnaplet
  build-depends:       base
                     , aeson
                     , transformers
                     , mtl
                     , bytestring
                     , lens
                     , resourcet
                     , monad-logger
                     , snap
                     , snap-core
                     , snap-extras
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , esqueleto
  default-language:    Haskell2010

executable simple-backend
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , persistent-sqlite
                     , simple-backend
                     , snap
  default-language:    Haskell2010

test-suite simple-backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , hspec
                     , bytestring
                     , snap
                     , snap-core
                     , text
                     , simple-backend
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/martintrojer/simple-backend
